# General-parallel-genetic-algorithm-on-GPU

./: README.en.md  README.md
puzzle_problem/cpp/: CMakeLists.txt  GeneticAlgorithm.hpp  crossover.hpp  image_helpers.hpp  puzzle.cu  readme.md
src/: GA1.cu  数据.xlsx
报告/: 基于CUDA平台的遗传算法实现.md  数据.txt  数据2.txt  遗传算法流程图.drawio
改进GA/: GA2.cu  GeneticAlgorithm.hpp  readme.md
